# serafin

./: .dockerignore  .gitignore  Dockerfile  README.md  bower.json  docker-compose.yml  package.json  pyproject.toml  supervisor.conf
codelogs/: admin.py  models.py
codelogs/migrations/: 0001_initial.py  0002_codelog_log.py
content/: views.py  widgets.py
events/: admin.py  importexport.py  middleware.py  models.py  signals.py
events/migrations/: 0001_initial.py  0002_auto_20150218_1221.py
plumbing/: forms.py  urls.py  views.py  widgets.py
serafin/: __init__.py  apps.py  settings.py
staticfiles/js/: chat.js
system/: admin.py  engine.py  expressions.py  filters.py  models.py  rules.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
system/migrations/: 0001_initial.py  0002_auto_20150213_2248.py  0003_variable_admin_note.py  0004_auto_20150409_0055.py  0005_auto_20150409_0136.py  0006_session_route_slug.py  0007_session_is_open.py  0008_variable_program.py  0009_auto_20150423_0157.py  0010_migrate_conditions.py  0011_content_program.py  0012_auto_20150610_1723.py  0013_auto_20160428_0018.py  0014_auto_20180829_1552.py  0015_program_from_email.py  0016_code.py  0018_auto_20220702_0816.py
system/templatetags/: program.py  stylesheet.py
system/tests/: test_engine.py  test_expressions.py  (+1 more)
tasker/: admin.py  models.py  signals.py  tasks.py  tests.py
templates/: base.html  home.html
tokens/: json_status.py  tokens.py
users/: admin.py  backends.py  forms.py  importexport.py  middleware.py  models.py  urls.py  views.py
(+11 files in other folders)
